--- a/Front/pages/taskQuadroManager.html
+++ b/Front/pages/taskQuadroManager.html
@@ -23,9 +23,9 @@
 
     <main id="mainTaskManager">
         <div id="containerAllTask" class="quadroManager">
-            <section>
+            <section id="sectionHeaderQuadro">
                 <div id="headerAllTask">
-                    <h1>Tarefas - Unidade 3º</h1>
+                    <h1>Tarefas - Unidade 123</h1>
                 </div>
 
                 <div id="navAllTask">
