--- a/Front/index.html
+++ b/Front/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./styles.css">
     <script type="module" src="./scripts/login.js" defer></script>
-    <title>Document</title>
+    <title>Login</title>
 </head>
 
 <body>
