--- a/Front/pages/openCalls.html
+++ b/Front/pages/openCalls.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- <script type="module" src="../scripts/index.js" defer></script> -->
     <link rel="stylesheet" href="../styles.css">
-    <title>Documentt</title>
+    <title>Chamados Abertos</title>
 
     <style>
         /* Estilos para o modal */
@@ -143,11 +143,11 @@
 
         function storageCall(id) {
             localStorage.setItem('idCall', id);
-            window.location.href = 'http://10.116.75.167:13542/Front/pages/infoChamado.html';
+            window.location.href = `http://${ipServer}:13542/Front/pages/infoChamado.html`;
         }
 
         window.onload = () => {
-            fetch(`http://10.116.75.167:3000/calls`)
+            fetch(`http://${ipServer}:3000/calls`)
                 .then(response => {
                     if (response.status === 200) {
                         // console.log(response.json());
@@ -186,7 +186,7 @@
                             }
 
                             let htmlCall = `<tr>
-                                <td class="tarefas" style="padding-left: 5px;"><img class="callImage" width="100px" style="cursor: pointer;" src="http://10.116.75.167:3000/getImage/${call.id_image}"></td>
+                                <td class="tarefas" style="padding-left: 5px;"><img class="callImage" width="100px" style="cursor: pointer;" src="http://${ipServer}:3000/getImage/${call.id_image}"></td>
                                 <td class="tarefas" style="white-space: pre; padding: 0 10px; text-align: center;"><a style="all: unset; cursor: pointer;" onclick="storageCall('${call.id}')">${formattedDateTime} <br> ${timePassed}</a></td>
                                 <td class="status" style="color: black; font-size: 20px;">${call.sala}</td>
                                 <td class="descricao call" style="padding-left: 15px">${call.text}</td>
