--- a/Front/pages/taskManager.html
+++ b/Front/pages/taskManager.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script type="module" src="../scripts/index.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
-    <title>Documentt</title>
+    <title>Tarefas Gerais</title>
 
     <style>
         th,
