--- a/Front/pages/taskQuadroColab.html
+++ b/Front/pages/taskQuadroColab.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- <script type="module" src="../scripts/index.js" defer></script> -->
     <link rel="stylesheet" href="../styles.css">
-    <title>Document</title>
+    <title>KanBan</title>
 </head>
 
 <body>
@@ -159,9 +159,12 @@
         }
     </script>
 
-    <script>
-
+    <script type="module">
+        import { ipServer } from "../ipConfig.js"; // Caminho para o arquivo com as configurações do ip
         let idUser = localStorage.getItem('idUser');
+
+        console.log('TESTE: ' + ipServer);
+        
 
         // window.editStatus = function (idTask) {
         //     console.log(idTask);
@@ -172,7 +175,7 @@
         }
 
         function getUserName(idUser) {
-            fetch(`http://10.116.75.167:3000/user/${idUser}`)
+            fetch(`http://${ipServer}:3000/user/${idUser}`)
                 .then(response => {
                     if (response.status === 200) {
                         // console.log(response.json());
@@ -193,7 +196,7 @@
 
         // ----------------------------
         function getTask(username) {
-            fetch(`http://10.116.75.167:3000/tasks`)
+            fetch(`http://${ipServer}:3000/tasks`)
                 .then(response => {
                     if (response.status === 200) {
                         return response.json();
