--- a/Front/pages/addTask.html
+++ b/Front/pages/addTask.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="../ipConfig.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- <script type="module" src="../scripts/index.js" defer></script> -->
     <script type="module" src="../scripts/addTask.js" defer></script>
@@ -254,7 +255,9 @@
         });
     </script>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
         const selectRespon = document.querySelector("#selectRespon");
         const inputRespon = document.getElementById("inputRespon");
 
@@ -300,7 +303,9 @@
 
     </script>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
         // Obtendo os parâmetros da URL
         const urlParams = new URLSearchParams(window.location.search);
 
