--- a/Front/pages/chamado.html
+++ b/Front/pages/chamado.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="../ipConfig.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
     <title>Chamado</title>
@@ -52,7 +53,11 @@
         </main>
     </section>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
+
+        
         const img = document.getElementById("imgUpload");
         const fileInput = document.getElementById("fileInput");
         const addTaskAdicionar = document.getElementById("addTaskAdicionar");
