--- a/Front/pages/infoTask.html
+++ b/Front/pages/infoTask.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script type="module" src="../scripts/index.js" defer></script>
+    <script type="module" src="../ipConfig.js" defer></script>
     <script type="module" src="../scripts/infoTask.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <title>Tarefa</title>
@@ -236,7 +237,9 @@
         });
     </script>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
         const selectRespon = document.querySelector("#selectRespon");
         const inputRespon = document.getElementById("inputRespon");
 
