--- a/Front/pages/taskColab.html
+++ b/Front/pages/taskColab.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- <script type="module" src="../scripts/index.js" defer></script> -->
+    <script type="module" src="../ipConfig.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <title>Suas Tarefas</title>
 </head>
@@ -95,7 +96,9 @@
         }
     </script>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
 
         let idUser = localStorage.getItem('idUser');
 
