--- a/Front/pages/taskManager.html
+++ b/Front/pages/taskManager.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script type="module" src="../scripts/index.js" defer></script>
+    <script type="module" src="../ipConfig.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <title>Tarefas Gerais</title>
 
@@ -101,7 +102,9 @@
         }
     </script>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
         document.addEventListener("DOMContentLoaded", () => {
             const resizers = document.querySelectorAll(".resizer");
             resizers.forEach(resizer => {
