--- a/Front/pages/taskQuadroManager.html
+++ b/Front/pages/taskQuadroManager.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script type="module" src="../scripts/index.js" defer></script>
+    <script type="module" src="../ipConfig.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <title>KanBan</title>
 </head>
@@ -152,7 +153,9 @@
         </div>
     </main>
 
-    <script>
+    <script type="module">
+        import { ipServer } from '../ipConfig.js';
+        console.log("IP do Servidor:", ipServer);
         function storeTaskId(id) {
             console.log("Armazenando ID da tarefa: ", id); // Verifica se o ID está sendo passado corretamente
             localStorage.setItem('taskId', id);
